<resources>
    <string name="app_name" translatable="false">NoSplash</string>
    <string name="action_donate">Setting</string>
    <string name="action_add">Add</string>
    <string name="dialog_choose_app_title">Choose Application</string>
    <string name="dialog_change_launcher_title" translatable="false">Launcher Activity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_delete_rule">Deletion</string>
    <string name="confirm_delete_rule">Confirm deleting this rule?</string>
    <string name="donate_alipay">Alipay</string>
    <string name="dialog_donate_title">Donate</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="succeed">Succeed!</string>
    <string name="about_title">About</string>
    <string name="export_succ">Succeed! Preference location：sdcard/nosplash_conf.json</string>
    <string name="loading">Loading...</string>
</resources>
