<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_donate"
          android:icon="@mipmap/ic_favorite_black_24dp"
          android:title="@string/action_donate"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_add"
        android:icon="@mipmap/ic_add_black_24dp"
        android:title="@string/action_add"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        android:showAsAction="never"/>

    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:showAsAction="never"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:showAsAction="never"/>
</menu>